<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/visor"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:cursorVisible="true"
        android:background="#e6e6e6"
        android:ems="10"
        android:inputType="number"
        android:gravity="right"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="30dp"
        />

    <TextView
        android:id="@+id/visorResultado"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e6e6e6"
        android:gravity="right"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:layout_below="@id/visor"
        android:layout_marginTop="6dp"
        />

    <Button
        android:id="@+id/btSiguiente"
        android:layout_below="@id/visorResultado"
        android:layout_marginTop="40dp"
        android:layout_width="236dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="4dp"
        android:onClick="onSendResultado"
        android:text="@string/siguiente"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btMemoria"
        android:layout_above="@id/btBorrar"
        android:layout_toRightOf="@id/btSiguiente"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="26dp"
        android:layout_below="@id/visorResultado"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="memoria"
        android:text="@string/memoria"
        android:gravity="center"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/bt7"
        android:layout_below="@id/btSiguiente"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:onClick="button7"
        android:text="@string/boton7"
        android:gravity="center"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/bt8"
        android:layout_below="@id/btSiguiente"
        android:layout_toRightOf="@id/bt7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:onClick="button8"
        android:text="@string/boton8"
        android:gravity="center"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/bt9"
        android:layout_below="@id/btSiguiente"
        android:layout_toRightOf="@id/bt8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="button9"
        android:text="@string/boton9"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btBorrarUltimo"
        android:layout_below="@id/btSiguiente"
        android:layout_toRightOf="@id/bt9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="borrarDEL"
        android:text="@string/borrarUltimo"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btBorrar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/btSiguiente"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/btBorrarUltimo"
        android:gravity="center"
        android:onClick="borrarAC"
        android:text="@string/borrar"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt4"
        android:layout_below="@id/bt7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:onClick="button4"
        android:text="@string/boton4"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/bt5"
        android:layout_below="@id/bt8"
        android:layout_toRightOf="@id/bt4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="button5"
        android:text="@string/boton5"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/bt6"
        android:layout_below="@id/bt9"
        android:layout_toRightOf="@id/bt5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="button6"
        android:text="@string/boton6"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btMultiplicacion"
        android:layout_below="@id/btBorrarUltimo"
        android:layout_toRightOf="@id/bt6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="multiplicacion"
        android:text="@string/multiplicacion"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btDivision"
        android:layout_below="@id/btBorrar"
        android:layout_toRightOf="@id/btMultiplicacion"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="division"
        android:text="@string/division"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/bt1"
        android:layout_below="@id/bt4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:onClick="button1"
        android:text="@string/boton1"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/bt2"
        android:layout_below="@id/bt5"
        android:layout_toRightOf="@id/bt1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="button2"
        android:text="@string/boton2"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/bt3"
        android:layout_below="@id/bt6"
        android:layout_toRightOf="@id/bt2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="button3"
        android:text="@string/boton3"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btSuma"
        android:layout_below="@id/btMultiplicacion"
        android:layout_toRightOf="@id/bt3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="suma"
        android:text="@string/suma"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btResta"
        android:layout_below="@id/btDivision"
        android:layout_toRightOf="@id/btSuma"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="resta"
        android:text="@string/resta"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/bt0"
        android:layout_below="@id/bt1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:onClick="button0"
        android:text="@string/boton0"
        android:gravity="center"
        android:textSize="15dp"
    />

    <Button
        android:id="@+id/btPunto"
        android:layout_below="@id/bt2"
        android:layout_toRightOf="@id/bt0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="buttonPunto"
        android:text="@string/punto"
        android:gravity="center"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/btExp"
        android:layout_below="@id/bt3"
        android:layout_toRightOf="@id/btPunto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="Exponente"
        android:text="@string/exp"
        android:gravity="center"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/btRaiz"
        android:layout_below="@id/btSuma"
        android:layout_toRightOf="@id/btExp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="raiz"
        android:text="@string/raiz"
        android:gravity="center"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/btIgual"
        android:layout_below="@id/btResta"
        android:layout_toRightOf="@id/btRaiz"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="igual"
        android:text="@string/igual"
        android:gravity="center"
        android:textSize="15dp"
        />


    </RelativeLayout>





















